2006-03-29  Gary Benson  <gbenson@redhat.com>

	Partial fix for PR classpath/24895
	* java/io/FilePermission.java (implies): Canonicalize paths.

2006-03-29  Robert Schuster  <robertschuster@fsfe.org>

	PR 26888
	* javax/swing/text/GapContent.java:
	(replace): Added call to resetMarksAtZero.

2006-03-29  Roman Kennke  <kennke@aicas.com>

	PR 23527
	* javax/swing/plaf/basic/BasicMenuItemUI.java
	(cachedRect): New field.
	(BasicMenuItemUI): Initialize cachedRect field.
	(getPreferredMenuItemSize): Use layoutMenuItem() helper method
	to determine layout. Store maximum accelerator and text width
	in client properties of parent to allow correct alignment
	of accelerators among menu items of one menu.
	(paintMenuItem): Outsourced menu item layout into layoutMenuItem
	method. Align accelerators according to the values calculated
	in getPreferredMenuItemSize.
	(getAcceleratorString) New helper method.
	(layoutMenuItem): New helper method.

2006-03-29  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/java/rmi/activation/ActivationSystemTransient.java: Rewritten.
	* gnu/java/rmi/activation/BidiTable.java: Rewritten.
	* gnu/java/rmi/dgc/LeaseRenewingTask.java (constructor, sheduleLeases):
	Avoid NPEs.
	* gnu/java/rmi/server/ActivatableServerRef.java (getRefClass, 
	readExternal, writeExternal): New methods.
	* gnu/java/rmi/server/UnicastRef.java (invokeCommon): Splitten into
	two stages, invokeCommon(Remote, ...) and 
	invokeCommen(UnicastConnection, ...).
	* java/rmi/server/RemoteObject.java (readObject, writeObject): Expect
	also the ActivatableRef. toString(): Documented.
	* gnu/java/rmi/server/ActivatableRef.java,
	tools/gnu/classpath/tools/rmi/Persistent.java,
	tools/gnu/classpath/tools/rmi/PersistentBidiHashTable.java,
	tools/gnu/classpath/tools/rmi/PersistentHashTable.java,
	tools/gnu/classpath/tools/rmi/REGISTRY.java,
	tools/gnu/classpath/tools/rmi/REGISTRY.txt,
	tools/gnu/classpath/tools/rmi/RMID.java,
	tools/gnu/classpath/tools/rmi/RMID.txt,